--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -4,7 +4,7 @@ on: [repository_dispatch]
 
 jobs:
   ping-pong:
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-latest
     steps:
       - name: Event Information
         run: |
