--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -1,28 +1,19 @@
-# name: Remote Dispatch Action Responder
+name: Remote Dispatch Action Responder
 
-# on: [repository_dispatch]
-
-# jobs:
-#   ping-pong:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Event Information
-#         run: |
-#           echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
-#       # - name: PONG - Dispatch response to received PING
-#       #   if: github.event.action == 'ping'
-#       #   run: |
-#       #     curl -X POST https://github.com/Rollson/dispatch-a/dispatches \
-#       #     -H 'Accept: application/vnd.github.everest-preview+json' \
-#       #     -u ${{ secrets.ACCESS_TOKEN }} \
-#       #     --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
-
-name: workflow_B
 on: [repository_dispatch]
+
 jobs:
-  cypress-run:
+  ping-pong:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Triggering Wokflow B"
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Event Information
+        run: |
+          echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+      - name: PONG - Dispatch response to received PING
+        if: github.event.action == 'ping'
+        run: |
+          curl -X POST https://github.com/Rollson/dispatch-a/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          
