--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -1,19 +1,31 @@
-name: Remote Dispatch Action Responder
+# name: Remote Dispatch Action Responder
 
-on: [repository_dispatch]
+# on: [repository_dispatch]
 
+# jobs:
+#   ping-pong:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Event Information
+#         run: |
+#           echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+#       - name: PONG - Dispatch response to received PING
+#         if: github.event.action == 'ping'
+#         run: |
+#           curl -X POST https://github.com/Rollson/dispatch-a/dispatches \
+#           -H 'Accept: application/vnd.github.everest-preview+json' \
+#           -u ${{ secrets.ACCESS_TOKEN }} \
+#           --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+
+name: Repository Dispatch
+on:
+  repository_dispatch:
+    types: [my-event]
 jobs:
-  ping-pong:
+  myEvent:
     runs-on: ubuntu-latest
     steps:
-      - name: Event Information
-        run: |
-          echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
-      - name: PONG - Dispatch response to received PING
-        if: github.event.action == 'ping'
-        run: |
-          curl -X POST https://github.com/Rollson/dispatch-a/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
-          
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.client_payload.ref }}
+      - run: echo ${{ github.event.client_payload.sha }}
