--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -25,6 +25,8 @@ jobs:
   myEvent:
     runs-on: ubuntu-latest
     steps:
+      - name: echo branch
+        run: echo "my branch is '${{ github.ref }}'"
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.client_payload.ref }}
