--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -32,8 +32,9 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.ref }}
       - run: echo ${{ github.event.client_payload.sha }}
+      - run: echo "my branch is '${{ github.event.client_payload.ref }}'"
 
-      - name: echo github.event.client_payload.ref branch
-        run: echo "my branch is '${{ github.event.client_payload.ref }}'"
+      # - name: echo github.event.client_payload.ref branch
+      #   run: echo "my branch is '${{ github.event.client_payload.ref }}'"
 
 # hello chander
