--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo github.ref branch
-        run: echo "my branch is '${{ github.ref }}'"
+        run: echo "my branch is '${{ client_payload.ref }}'"
         
       - uses: actions/checkout@v3
         with:
@@ -34,7 +34,7 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo ${{ github.event.client_payload.sha }}
+      # - run: echo ${{ github.event.client_payload.sha }}
 
       # - name: echo github.event.client_payload.ref branch
       #   run: echo "my branch is '${{ github.event.client_payload.ref }}'"
