--- a/.github/workflows/workflow_B.yml
+++ b/.github/workflows/workflow_B.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo github.ref branch
-        run: echo "my branch is '${{ client_payload.ref }}'"
+        run: echo "my branch is '${{ github.ref }}'"
         
       - uses: actions/checkout@v3
         with:
